[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "print_macro"
path = "src/print_macro/main.rs"

[[bin]]
name = "fizzbuzz"
path = "src/fizzbuzz/main.rs"

[[bin]]
name = "print_mult_of_3"
path = "src/print_mult_of_3/main.rs"

[[bin]]
name = "mult_table"
path = "src/mult_table/main.rs"

[[bin]]
name = "convert_year_to_joseon_era"
path = "src/convert_year_to_joseon_era/main.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci/main.rs"

[[bin]]
name = "calc_change_comb"
path = "src/calc_change_comb/main.rs"

[[bin]]
name = "caesar_cipher"
path = "src/caesar_chpher/main.rs"

[[bin]]
name ="multiplication"
path = "src/multiplication/main.rs"

[[bin]]
name = "trial_division"
path = "src/trial_division/main.rs"

[[bin]]
name = "ref"
path = "src/ref/main.rs"

[[bin]]
name = "mutable_vector"
path = "src/mutable_vector/main.rs"

[dependencies]
